fix responsiveness when export by using web worker utilized OffscreenCanvas

--- a/src/components/styles/AppLoadingBar.module.css
+++ b/src/components/styles/AppLoadingBar.module.css
@@ -1,4 +1,5 @@
 .loadingBar {
+    background-color: #161122;
     height: 3em;
     width: 90%;
     max-width: 600px;
@@ -6,6 +7,7 @@
     border: 1px solid rgb(0, 148, 74);
     padding: 0.25em;
     box-sizing: border-box;
+    position: relative;
 }
 
 .loadingBarProgress {
@@ -17,5 +19,12 @@
     width: 0;
     border-radius: 2px;
 
-    transition: width 0.2s ease-in-out;
+    transition: width 0.1s linear;
+}
+
+.loadingBarText{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
